# pawnai

./: .env.example  .gitignore  .pawn-diarize.yaml  .pawn-diarize.yml.example  .pawnai.yml.example  .stdix.yaml  AGENTS.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  alembic.ini  anima.example.md  docker-compose.yml  litellm_config.yaml  mlflow.db  pyproject.toml  requirements.txt  setup.py
.burr/pawn-agent/!jFVtlSXKnDtNxWglAX:matrix.codref.org::session::delme-22/: graph.json  log.jsonl
.burr/pawn-agent/!jFVtlSXKnDtNxWglAX:matrix.codref.org::session::delme-33/: graph.json  log.jsonl
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
docker/: docker-compose.yml  init.sql
docker/litellm/: Dockerfile
docs/: AGENT_QUEUE_LISTENER.md  AGENT_TOOL_AUTHORING.md  ARCHITECTURE.md  COMBINED_FEATURE.md  DATABASE.md  DEVELOPMENT.md  LITELLM_PROXY.md  OPENAI_API.md  PROJECT_ORGANIZATION.md  QUEUE_LISTENER.md  QUEUE_PRODUCER_CLIENT_GUIDE.md  SETUP_COMPLETE.md  TOOLS.md  TTS.md  roadmap.md  siyuan-API.md
docs/plans/: queue-producer-agent-tool.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_session_analysis_tags.py  0003_rag_tables.py  0004_graph_triples.py  0005_agent_runs.py  0006_agent_session_turns.py  0007_agent_session_vars.py  0008_langgraph_session_state.py  0009_drop_rag_tables.py
pawn-agent/: pyproject.toml
pawn-agent/pawn_agent/: __init__.py  __main__.py  config.py  listener.py  lm.py
pawn-agent/pawn_agent/agent/: __init__.py  executor.py  planner.py
pawn-agent/pawn_agent/executors/: __init__.py  analysis.py  combined.py  diarization.py  registration.py  s3.py  siyuan.py  transcription.py
pawn-agent/pawn_agent/skills/: __init__.py  base_loader.py  dir_loader.py  executor_registry.py  models.py  registry.py  runner.py  template.py
pawn-agent/skills/: analyze.yaml  diarize.yaml  sync_siyuan.yaml  transcribe.yaml  transcribe_diarize.yaml
pawn-agent/tests/: conftest.py  test_dir_loader.py  test_executor.py  test_listener.py  test_planner.py  test_skill_runner.py  test_template.py
pawn-agent/tools/: cleanup_temp.yaml  download_s3.yaml  run_analysis.yaml  run_combined.yaml  run_diarization.yaml  run_transcription.yaml  sync_siyuan.yaml
pawn_agent/: __init__.py  __main__.py
pawn_agent/cli/: commands.py
pawn_agent/core/: agent.py  api_server.py  burr_actions.py  burr_agent.py  burr_chat.py  burr_context.py  burr_state.py  chat_primitives.py  copilot_sub.py  langgraph_chat.py  langgraph_registry.py  langgraph_runtime.py  langgraph_state.py  langgraph_tools.py  litellm_custom.py  llm_sub.py  lm.py  pydantic_agent.py  queue_listener.py  session_store.py  session_vars.py  store.py  tools.py
pawn_agent/tools/: __init__.py  analyze_custom.py  analyze_summary.py  extract_graph.py  fetch_siyuan_page.py  forget_memory.py  get_analysis.py  list_sessions.py  memorize.py  push_queue_message.py  query_conversation.py  rag_stats.py  recall_memory.py  save_to_siyuan.py  search_knowledge.py  session_vars.py  vectorize.py
pawn_agent/utils/: analysis.py  config.py  db.py  model_utils.py  siyuan.py  transcript.py  vectorize.py
pawn_core/: __init__.py  config.py  database.py  siyuan.py  transcription.py  tts.py
pawn_diarize/: __init__.py  __main__.py
pawn_diarize/cli/: __init__.py  commands.py
pawn_diarize/core/: __init__.py  analysis.py  combined.py  config.py  database.py  diarization.py  embeddings.py  queue_listener.py  s3.py  siyuan.py  transcription.py  vectorize.py
pawn_server/: __init__.py  __main__.py
pawn_server/cli/: commands.py
pawn_server/core/: api_server.py  queue_listener.py
pawnai/: __init__.py  __main__.py
pawnai/cli/: __init__.py  commands.py  utils.py
pawnai/core/: __init__.py  analysis.py  combined.py  config.py  database.py  diarization.py  embeddings.py  models.py  queue_listener.py  s3.py  siyuan.py  transcription.py
pawnai/utils/: __init__.py
plan/: burr_refactor.md
systemd/: install.sh  litellm-docker.service  litellm.service  pawn-agent.service  pawn-diarize.service  pawn-server.service
tests/: conftest.py  test_agent.py  test_agent_queue_listener.py  test_analyze_custom_tool.py  test_api_server_history.py  test_burr_chat.py  test_chat_primitives.py  test_cli.py  test_core.py  test_langgraph_chat.py  test_pawn_agent_cli.py  test_push_queue_message.py  test_pydantic_agent_content_compat.py  test_session_store_inspect.py  test_utils.py
