[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pawn-diarize"
dynamic = ["version"]
description = "Speaker diarization and transcription CLI tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pawn Diarize Contributors"},
]
keywords = ["audio", "diarization", "transcription", "speaker", "embedding", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "nemo_toolkit[asr]>=2.6.0",
    "kokoro",
    "faster-whisper>=1.0.0",
    "pyannote.audio>=4.0.3",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",
    "prompt-toolkit>=3.0.0",
    "soundfile>=0.12.0",
    "PyYAML>=6.0",
    "boto3>=1.26.0",
    "github-copilot-sdk",
    "pydantic-ai>=0.1.0",
    "requests>=2.28.0",
    "alembic>=1.13.0",
    "sentence-transformers>=2.7.0",
    "pawn-queue>=0.1",
    "aioboto3>=13.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "mlflow[genai]>=3.0.0",
    "pydantic-settings[yaml]>=2.3.0",
    "langgraph>=0.2.0",
    "arize-phoenix-otel>=0.9.0",
    "litellm>=1.40.0",
    "smolagents>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
litellm = [
    "httpx>=0.27.0",
]

[project.scripts]
pawn-diarize = "pawn_diarize.__main__:main"
pawn-agent = "pawn_agent.__main__:main"
pawn-server = "pawn_server.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "pawn_diarize.__version__"}

[project.urls]
Homepage = "https://github.com/example/pawn-diarize"
Documentation = "https://github.com/example/pawn-diarize#readme"
Repository = "https://github.com/example/pawn-diarize.git"
"Bug Tracker" = "https://github.com/example/pawn-diarize/issues"

[tool.setuptools]
packages = [
    "pawn_core",
    "pawn_diarize", "pawn_diarize.core", "pawn_diarize.cli", "pawn_diarize.utils",
    "pawn_agent", "pawn_agent.core", "pawn_agent.cli", "pawn_agent.utils", "pawn_agent.tools",
    "pawn_server", "pawn_server.core", "pawn_server.cli",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=pawn_diarize --cov-report=term-missing"
